--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-session": "^2.0.0-alpha.1",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "knex": "^0.12.6",
     "node-sass": "^3.10.1",
     "pg": "^6.1.0",
