--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "knex": "^0.12.6",
     "node-sass": "^3.10.1",
     "pg": "^6.1.0",
-    "socket.io": "^1.5.1"
+    "socket.io": "^1.5.1",
+    "twilio": "^2.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
